# cpp-kana

./: CMakeLists.txt  README.md  cpp-kanaConfig.cmake.in
include/: Kana.h
include/cpp-kana/: Kana.h  KanaGlobal.h  KanaRes.h  RomajiRes.h  U16Str.h
src/: Kana.cpp  KanaRes.cpp  KanaRes.h  Kana_p.h  RomajiRes.cpp  U16Str.cpp  U32Str.cpp  U32Str.h  Utils.cpp  Utils.h
tests/: CMakeLists.txt  main.cpp
